--- a/browser/index.html
+++ b/browser/index.html
@@ -15,6 +15,7 @@
     <script src="/js/artist/artist.controllers.js" defer></script>
     <script src="/js/artist/artist.factory.js" defer></script>
     <script src="/js/song/song.factory.js" defer></script>
+    <script src="/angular-ui-router/release/angular-ui-router.js" defer></script>
   </head>
   <body ng-app="juke">
     <div id="main" class="container-fluid">
@@ -36,8 +37,8 @@
       </div>
 
       <div class="col-xs-10">
-
-        <div ng-controller="AlbumsCtrl" ng-show="showMe">
+        <ui-view></ui-view>
+        <!--<div ng-controller="AlbumsCtrl" ng-show="showMe">
           <h3>Albums</h3>
           <div class="row">
             <div class="col-xs-4" ng-repeat="album in albums">
@@ -52,9 +53,9 @@
               </a>
             </div>
           </div>
-        </div>
+        </div>-->
 
-        <div class="album" ng-controller="AlbumCtrl" ng-show="showMe">
+        <!--<div class="album" ng-controller="AlbumCtrl" ng-show="showMe">
           <p>
             <h3>{{ album.name }}</h3>
             <img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
@@ -81,18 +82,18 @@
               </tr>
             </tbody>
           </table>
-        </div>
+        </div>-->
 
-        <div ng-show="showMe" ng-controller="ArtistsCtrl">
+        <!--<div ng-show="showMe" ng-controller="ArtistsCtrl">
           <h3>Artists</h3>
             <div class="list-group">
               <div class="list-group-item" ng-repeat="artist in artists">
               <a href="#" ng-click="viewOneArtist(artist)">{{ artist.name }}</a>
             </div>
           </div>
-        </div>
+        </div>-->
 
-        <div ng-show="showMe" ng-controller="ArtistCtrl">
+        <!--<div ng-show="showMe" ng-controller="ArtistCtrl">
             <h3>{{ artist.name }}</h3>
             <h3>Albums</h3>
             <div class="row">
@@ -130,7 +131,7 @@
                 </tr>
               </tbody>
             </table>
-        </div>
+        </div>-->
 
       </div>
 
